Fix saving status dialog on mobile screen

--- a/web/src/app/admin/editor/editor.component.scss
+++ b/web/src/app/admin/editor/editor.component.scss
@@ -68,6 +68,7 @@
   border-radius: 0.2rem 0.2rem 0 0;
   bottom: 0;
   color: #e3f2fd;
+  display: flex;
   font: normal 400 1.2rem Lato, sans-serif;
   left: calc(50% + 25.6rem);
   padding: 0.4rem 0.8rem;
